--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-csv": "^2.0.3",
     "react-dom": "^16.12.0",
     "react-hotkeys-hook": "^3.3.2",
     "react-i18next": "11.0.0",
