--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-to-print": "^2.13.0",
     "reactstrap": "^8.4.1",
     "recompose": "^0.30.0",
     "socket.io": "^2.3.0",
