--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bizcharts": "^4.1.11",
     "bootstrap": "^4.4.1",
     "crypto-js": "^4.0.0",
     "date-fns": "^2.0.0-beta.5",
@@ -35,6 +36,7 @@
     "react-scripts": "3.4.0",
     "react-to-print": "^2.13.0",
     "reactstrap": "^8.4.1",
+    "recharts": "^2.1.0",
     "recompose": "^0.30.0",
     "socket.io": "^2.3.0",
     "xlsx": "^0.17.0"
